--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -72,7 +73,252 @@
     </section>
 <!-- Expertise -->
 <section class="expertise">
-    1`21`   
+    <h1>We Are Expertise In Area’s Like</h1>
+    <div class="expertise-cards">
+        <div class="expertse-card">
+            <div class="card-img">
+                <img src="images/floor-plan.png" alt="construction plan">
+            </div>
+            <div class="card-text">
+                <h3>Construction</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                <a href="#">READ MORE</a>
+            </div>
+        </div>
+
+        <div class="expertse-card">
+            <div class="card-img">
+                <img src="images/interior-design.png" alt="construction plan">
+            </div>
+            <div class="card-text">
+                <h3>Interior</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                <a href="#">READ MORE</a>
+            </div>
+        </div>
+
+        <div class="expertse-card">
+            <div class="card-img">
+                <img src="images/engineering.png" alt="construction plan">
+            </div>
+            <div class="card-text">
+                <h3>Engineering</h3>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                <a href="#">READ MORE</a>
+            </div>
+        </div>
+    </div>
+    <img src="images/interior-min.jpg" alt="interior-design">
 </section>
+
+<!-- Articles -->
+<section class="article">
+    <h1>Read Latest Article</h1>
+    <div class="articles">
+        <div class="article-card">
+            <img src="images/05.jpg" alt="man">
+            <div class="articl-card-info">
+                <p>by john doe <span>&bull;</span> Developing</p>
+                <h4>Developing Tech Systems</h4>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+
+        <div class="article-card">
+            <img src="images/04.jpg" alt="man">
+            <div class="articl-card-info">
+                <p>by john doe <span>&bull;</span> Application</p>
+                <h4>Top 10 best technologies</h4>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+
+        <div class="article-card">
+            <img src="images/03.jpg" alt="man">
+            <div class="articl-card-info">
+                <p>by john doe <span>&bull;</span> Developing</p>
+                <h4>Developing Tech Systems</h4>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+
+        <div class="article-card">
+            <img src="images/05.jpg" alt="man">
+            <div class="articl-card-info">
+                <p>by john doe <span>&bull;</span> Developing</p>
+                <h4>Developing Tech Systems</h4>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- featured -->
+
+<section class="featured">
+    <h1>Our Featured Project</h1>
+    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+    <button class="readMore-buton">Read More</button>
+</section>
+
+
+<!-- offer Slider -->
+<section class="offer-slider">
+    <div class="offer-card-wrapper">
+        <div class="offer-card">
+            <h3>Modern Living Area</h3>
+            <div class="offer-card-info">
+                <p>Amet minim mollit non deserunt ullam est sit aliqua dolor do amet sint.</p>
+                <button class="readMore-buton" href="#">Read more</button>
+            </div>
+        </div>
+
+        <div class="offer-card">
+            <h3>Furniture Design</h3>
+            <div class="offer-card-info">
+                <p>Amet minim mollit non deserunt ullam est sit aliqua dolor do amet sint.</p>
+                <button class="readMore-buton" href="#">Read more</button>
+            </div>
+        </div>
+
+        <div class="offer-card">
+            <h3>Interior Kitchen</h3>
+            <div class="offer-card-info">
+                <p>Amet minim mollit non deserunt ullam est sit aliqua dolor do amet sint.</p>
+                <button class="readMore-buton" href="#">Read more</button>
+            </div>
+        </div>
+
+        <div class="offer-card">
+            <h3>Office Structure</h3>
+            <div class="offer-card-info">
+                <p>Amet minim mollit non deserunt ullam est sit aliqua dolor do amet sint.</p>
+                <button class="readMore-buton" href="#">Read more</button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Offers -->
+
+<section class="offers">
+    <div class="main-info">
+        <h1>What We Have To Offer</h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>
+        <div class="progress-bars">
+            <div class="progress-bar-content">
+                <span class="progress-title">Interior</span>
+                <span class="show-progress"></span>
+                <span class="progress-value"></span>
+            </div>
+
+            <div class="progress-bar-content">
+                <span class="progress-title">Interior</span>
+                <span class="show-progress"></span>
+                <span class="progress-value"></span>
+            </div>
+
+            <div class="progress-bar-content">
+                <span class="progress-title">Interior</span>
+                <span class="show-progress"></span>
+                <span class="progress-value"></span>
+            </div>
+        </div>
+    </div>
+    <div class="toggable-section">
+        <details>
+            <summary>Business Plan Development</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </details>
+    </div>
+
+    <div class="toggable-section">
+        <details>
+            <summary>Financial Analysis</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </details>
+    </div>
+
+    <div class="toggable-section">
+        <details>
+            <summary>Strategy Development</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </details>
+    </div>
+
+    <div class="toggable-section">
+        <details>
+            <summary>Financial Forecast Development</summary>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
+        </details>
+    </div>
+</section>
+
+<section class="staff">
+
+    <div class="staff-card1">
+        <div class="inner-info">
+            <p>Lawyer</p>
+            <h4>Jhone Snow</h4>
+        </div>
+    </div>
+    
+    <div class="staff-card2">
+        <div class="inner-info">
+            <p>Lawyer</p>
+            <h4>Jhone Snow</h4>
+        </div>
+    </div>
+    
+    <div class="staff-card3">
+        <div class="inner-info">
+            <p>Lawyer</p>
+            <h4>Jhone Snow</h4>
+        </div>
+    </div>
+
+    <div class="staff-card4">
+        <div class="inner-info">
+            <p>Lawyer</p>
+            <h4>Jhone Snow</h4>
+        </div>
+    </div>
+
+    <div class="staff-card5">
+        <div class="inner-info">
+            <p>Lawyer</p>
+            <h4>Jhone Snow</h4>
+        </div>
+    </div>
+
+    <div class="staff-card6">
+        <div class="inner-info">
+            <p>Lawyer</p>
+            <h4>Jhone Snow</h4>
+        </div>
+    </div>
+
+</section>
+
+<footer>
+    <div class="newsletter">
+        <h3>Our Newsletter</h3>
+        <form action="#">
+            <input type="email" name="email">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    <div class="address">
+        <address>2118 Thornridge Cir. Syracuse, Connecticut 35624</address>
+        <p>(316) 555-0116</p>
+        <p>Architecture@example.com</p>
+    </div>
+    <div class="social">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-google-plus-g"></i>
+    </div>
+</footer>
 </body>
 </html>
